More DSM updates Another pass on conceptual pages Move DSM in toc Update images

--- a/windows-driver-docs-pr/storage/toc.yml
+++ b/windows-driver-docs-pr/storage/toc.yml
@@ -35,8 +35,15 @@
       href: querying-for-the-write-cache-property.md
     - name: "Device Unique Identifiers (DUIDs) for Storage Devices"
       href: device-unique-identifiers--duids--for-storage-devices.md
-    - name: "General Sorage I/O Control Codes"
+    - name: "General Storage I/O Control Codes"
       href: general-storage-io-control-codes.md
+    - name: "Storage Data Set Management (DSM)"
+# Auto-expanded node
+      items: 
+      - name: "Data Set Management Overview"
+        href: data-set-management-overview.md
+      - name: "DEVICE_DSM_ACTION Descriptions"
+        href: device-dsm-action-descriptions.md
     - name: "Sample Storport Miniport Driver for an LSI_U3 Device"
 # Auto-expanded node
       items: 
@@ -260,13 +267,6 @@
           href: hardware-initialization-with-storport.md
         - name: "Setting Port Configuration Information with Storport"
           href: setting-port-configuration-information-with-storport.md
-      - name: "Storage Data Set Management (DSM)"
-# Auto-expanded node
-        items: 
-        - name: "Data Set Management Overview"
-          href: data-set-management-overview.md
-        - name: "DEVICE_DSM_ACTION Descriptions"
-          href: device-dsm-action-descriptions.md
     - name: "ATA Port Driver"
 # Auto-expanded node
       items: 
