--- a/windows-driver-docs-pr/toc.yml
+++ b/windows-driver-docs-pr/toc.yml
@@ -42,6 +42,8 @@
     href: biometric/index.md
   - name: "Bluetooth Drivers"
     href: bluetooth/index.md
+  - name: "Component Firmware Update (CFU)"
+    href: cfu/index.md
   - name: "Display drivers"
     href: display/index.md
   - name: "Driver Development Tools"
