This PR is to publish a new topic on DDI support for multiple voice assistants  (#362)
* Adding new MVA audio content

* Adding new MVA audio content

* Adding new MVA audio content

* Adding new MVA audio content

* Adding new MVA audio content

--- a/windows-driver-docs-pr/audio/toc.yml
+++ b/windows-driver-docs-pr/audio/toc.yml
@@ -325,6 +325,8 @@
       href: configure-and-query-audiodevicemodules.md
   - name: "Low Latency Audio"
     href: low-latency-audio.md
+  - name: "Multiple Voice Assistant"
+    href: voice-activation-mva.md
   - name: "Voice Activation"
     href: voice-activation.md
   - name: "USB Audio 2.0 Drivers"
