--- a/windows-driver-docs-pr/audio/toc.yml
+++ b/windows-driver-docs-pr/audio/toc.yml
@@ -934,6 +934,8 @@
       href: kspropsetid-rtaudio.md
     - name: "KSPROPSETID_SoundDetector"
       href: kspropsetid-sounddetector.md
+    - name: "KSPROPSETID_SoundDetector2"
+      href: kspropsetid-sounddetector2.md
     - name: "KSPROPSETID_Synth"
       href: kspropsetid-synth.md
     - name: "KSPROPSETID_SynthClock"
