--- a/windows-driver-docs-pr/audio/toc.yml
+++ b/windows-driver-docs-pr/audio/toc.yml
@@ -1471,6 +1471,10 @@
       href: ksproperty-sounddetector-matchresult.md
     - name: "KSPROPERTY_SOUNDDETECTOR_PATTERNS"
       href: ksproperty-sounddetector-patterns.md
+    - name: "KSPROPERTY_SOUNDDETECTOR_RESET"
+      href: ksproperty-sounddetector-reset.md
+    - name: "KSPROPERTY_SOUNDDETECTOR_STREAMINGSUPPORT"
+      href: ksproperty-sounddetector-streamingsupport.md
     - name: "KSPROPERTY_SOUNDDETECTOR_SUPPORTEDPATTERNS"
       href: ksproperty-sounddetector-supportedpatterns.md
     - name: "KSPROPERTY_SYSAUDIO_ATTACH_VIRTUAL_SOURCE"
