add driver isolation info

--- a/windows-driver-docs-pr/develop/toc.yml
+++ b/windows-driver-docs-pr/develop/toc.yml
@@ -4,6 +4,8 @@
   items:
   - name: "Getting Started with Universal Drivers"
     href: getting-started-with-universal-drivers.md
+  - name: "Driver Package Isolation"
+    href: driver-isolation.md
   - name: "Building a Universal Windows driver"
     href: building-a-universal-driver.md
   - name: "Validating Universal Drivers"
