--- a/windows-driver-docs-pr/storage/toc.yml
+++ b/windows-driver-docs-pr/storage/toc.yml
@@ -137,6 +137,8 @@
         href: scsi-port-driver.md
       - name: "Capabilities Provided by SCSI Port"
         href: capabilities-provided-by-scsi-port.md
+      - name: "SCSI port driver support routines"
+        href: scsi-port-driver-support-routines.md
       - name: "SCSI Port's Interface with the Storage Class Driver"
 # Auto-expanded node
         items: 
@@ -183,8 +185,8 @@
           href: capabilities-provided-by-storport.md
         - name: "Storport driver support routines"
           href: storport-driver-support-routines.md
-        - name: "Storport driver miniport routines"
-          href: storport-driver-miniport-routines.md
+        - name: "Storport miniport driver routines"
+          href: storport-miniport-driver-routines.md
       - name: "Storport’s Interface with the Storage Class Driver"
 # Auto-expanded node
         items: 
@@ -276,6 +278,8 @@
         href: ata-port-s-interface-with-the-storage-class-driver.md
       - name: "ATA Port's Interface with ATA Miniport Drivers"
         href: ata-port-s-interface-with-ata-miniport-drivers.md
+      - name: "ATA Port "Storport driver support routines"
+        href: ata-port-driver-support-routines.md
       - name: "ATA Port I/O Model"
 # Auto-expanded node
         items: 
@@ -335,11 +339,11 @@
         href: restrictions-on-scsi-miniport-drivers-that-manage-the-boot-drive.md
       - name: "Error Handling in SCSI Miniport Drivers"
         href: error-handling-in-scsi-miniport-drivers.md
-      - name: "Required and Optional SCSI Miniport Driver Routines"
+      - name: "SCSI Miniport Driver Routines"
 # Auto-expanded node
         items: 
-        - name: "Required and Optional SCSI Miniport Driver Routines"
-          href: required-and-optional-scsi-miniport-driver-routines.md
+        - name: "SCSI Miniport Driver Routines"
+          href: scsi-miniport-driver-routines.md
         - name: "SCSI Miniport Driver's DriverEntry Routine"
           href: scsi-miniport-driver-s-driverentry-routine.md
         - name: "DriverEntry of SCSI Miniport Driver"
