--- a/windows-driver-docs-pr/storage/toc.yml
+++ b/windows-driver-docs-pr/storage/toc.yml
@@ -172,8 +172,8 @@
     - name: "Storport Driver"
 # Auto-expanded node
       items: 
-      - name: "Storport Driver"
-        href: storport-driver.md
+      - name: "Storport Driver Overview"
+        href: storport-driver-overview.md
       - name: "Life Cycle of a Storport Driver"
         href: life-cycle-of-a-storport-driver.md
       - name: "History of Storport"
